@@ -39,6 +39,11 @@
 #include <openssl/err.h>
 #include <openssl/rand.h>
 
+#if (defined LIBRESSL_VERSION_NUMBER && OPENSSL_VERSION_NUMBER == 0x20000000L)
+#undef OPENSSL_VERSION_NUMBER
+#define OPENSSL_VERSION_NUMBER 0x1000107FL
+#endif
+
 #include <pthread.h>
 
 /* #define REQUEST_CLIENT_CERT */
