@@ -1,6 +1,7 @@
 08/27/2016 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.5.0.5 'dan Eider':
 	- Typos in the text fixed.
+	- LibreSSL compatibility fixed. 
 	
 08/20/2016 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.5.0.4 'dan Eider':
